parser/src/test/resources/corpus/invalid/54_type_ext_no_field_kw.ff
type extension PeFund extends Fund {
  commitment_period: Period
}
